--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -93,6 +93,11 @@ aside {
     padding-left: 20px;
 }
 
+progress {
+    width: 250px;
+    height: 30px;
+}
+
 .flex-container-column {
     display: flex;
     flex-direction: column;
@@ -143,6 +148,39 @@ aside {
     width: 100%;
     margin: 20px auto 0 auto;
     overflow: scroll;
+}
+
+.flex-circle-column {
+    flex-direction: column;
+    margin: 1em;
+    flex: 1 1 auto;
+}
+
+.flex-circle-row {
+    display: flex;
+}
+
+svg .donut{
+    width: 100%;
+    height: 100%;
+}
+
+.donut-hole {
+    fill: #fff;
+}
+
+.donut-ring {
+    fill: transparent;
+    stroke: #d2d3d4;
+    stroke-width: 3;
+}
+
+.donut-segment {
+    fill: transparent;
+    stroke: #00c8eb;
+    stroke-width: 3;
+    stroke-dasharray: 85 15;
+    stroke-dashoffset: 25;
 }
 
 table {
